Fixed z-index of nav el (over code blocks)

--- a/themes/newgimp/static/css/gimp.css
+++ b/themes/newgimp/static/css/gimp.css
@@ -377,6 +377,7 @@ footer .nav-bottom a {
 
     a#navel {
         top: 0;
+        z-index: 2;
         font-size: 2rem;
         color: gray;
         display: block;
